--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -4,6 +4,12 @@
     <color name="accentBlue">#64B5F6</color>
     <color name="white">#FFFFFF</color>
     <color name="errorRed">#FF3B30</color> <!-- Couleur pour les règles du mot de passe -->
+    <color name="cardBackground">#FFFFFF</color>
+    <color name="borderGray">#E0E0E0</color>
+    <color name="textPrimary">#212121</color>
+    <color name="textSecondary">#757575</color>
+    <color name="red_600">#E53935</color>
+    <color name="green_600">#43A047</color> <!-- vert pour le + -->
     <!-- Couleurs principales -->
     <color name="primary_color">#2196F3</color> <!-- Bleu Material -->
     <color name="primary_dark">#1976D2</color>
