--- a/Frontend/app/src/main/res/layout/dialog_add_students.xml
+++ b/Frontend/app/src/main/res/layout/dialog_add_students.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:minWidth="300dp"
+    android:maxWidth="600dp">
 
     <EditText
         android:id="@+id/editNomPrenomStudent"
@@ -23,11 +25,18 @@
         android:id="@+id/btnAddApogee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ajouter à la liste" />
+        android:text="Ajouter à la liste"
+        android:backgroundTint="@color/primaryDarkBlue"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/btnConfirmAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirmer" />
+        android:text="Confirmer"
+        android:backgroundTint="@color/primaryDarkBlue"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="8dp"/>
+
 </LinearLayout>
