--- a/Frontend/app/src/main/res/layout/dialog_remove_students.xml
+++ b/Frontend/app/src/main/res/layout/dialog_remove_students.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:minWidth="300dp"
+    android:maxWidth="600dp">
 
     <EditText
         android:id="@+id/editNomPrenomStudentRemove"
@@ -24,11 +26,20 @@
         android:id="@+id/btnAddApogeeRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ajouter à la liste" />
+        android:text="Ajouter à la liste"
+
+
+        android:backgroundTint="@color/primaryDarkBlue"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/btnConfirmRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirmer" />
+        android:text="Confirmer"
+
+        android:backgroundTint="@color/primaryDarkBlue"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
